--- a/src/admin/show-logs.html
+++ b/src/admin/show-logs.html
@@ -16,12 +16,12 @@
                             ${item.fn}
                         </td>
                         <td class="center">
-                            <a href="#" popover="Delete" popover-trigger="mouseenter" click.delegate="delete_log_file(item.fn)">
+                            <a href="#" title="Delete" click.delegate="delete_log_file(item.fn)">
                             <i class="far fa-trash"></i>
                         </a>
                         </td>
                         <td class="center">
-                            <a href="#" popover="Download" popover-trigger="mouseenter" click.delegate="download_log_file(item.fn)">
+                            <a href="#" title="Download" click.delegate="download_log_file(item.fn)">
                             <i class="far fa-download"></i>
                         </a>
                         </td>
