--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -144,7 +144,7 @@
             <!--member stories panel-->
             <div id="stories" class="fr-view row ${theme.font-size}" ref="bottom_panel"
                 show.bind="member.member_stories.length > 1 && ! (user.editing || life_summary_expanded)"
-                css="margin-left:-28px;margin-right:0px;height:${bottom_height}px;"
+                css="margin-left:-28px;margin-right:0px;"
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
