--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -84,17 +84,19 @@
                             </div>
                         </form>
                     </div>
-                    <div class="row" id="photos-container" style="height:579px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;display:flex;flex-wrap:wrap">
-                        <div css="padding:0;margin:0;positionxx:relative;width:${photo_size}px;height:${photo_size}px;"
-                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
-                            <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
-                                class.bind="photo.selected" >
-                                <info css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-20}px;"
-                                    title.bind="photo_info_title(photo)" content.bind="photo_info_content(photo)"></info>
-                                <img src="${photo[photo.side].square_src}"  width="${photo_size}" 
-                                    height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
-                                    draggable="false" />
-                            </a>
+                    <div style="height:579px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;">
+                        <div class="row" id="photos-container" style="height:579px;overflow:auto;margin:0;padding:0;display:flex;flex-wrap:wrap">
+                            <div css="padding:0;margin:0;positionxx:relative;width:${photo_size}px;height:${photo_size}px;"
+                                repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
+                                <a style="position:relative;width:100%" click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
+                                    class.bind="photo.selected" >
+                                    <info css="position:absolute;top:${7 - photo_size / 2}px;left:${photo_size-20}px;"
+                                        title.bind="photo_info_title(photo)" content.bind="photo_info_content(photo)"></info>
+                                    <img src="${photo[photo.side].square_src}"  width="${photo_size}" 
+                                        height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
+                                        draggable="false" />
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
