--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="../stories/stories.css"></require>
 
     <div class="content-area photo-detail">
         <div class="detail-header"> 
@@ -8,6 +9,9 @@
             <h3 dir="rtl" style="float: right;margin:0px;">
                 ${photo_story.name}
             </h3>
+            <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing" 
+                class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
+            </button>
         </div>
         <div class="row">
             <div class="col-md-7" click.trigger="open_full_size_photo()">
@@ -15,15 +19,22 @@
             </div>
             <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-8" if.bind="story.source">
-                        <span style="float:right;direction:rtl">${story.source}:</span>
+                    <div class="col-md-4 col-md-offset-8" if.bind="photo_story.source">
+                        <span style="float:right;direction:rtl">${photo_story.source}:</span>
                     </div>
                 </div>
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div class="big-story-panel">
-                            <p dir="rtl" if.bind="! user.editing" innerhtml.bind="photo_story.story_text">
-                            </p>
+                            <div if.bind="! user.editing" class="row" style="padding-top:8px;width:100%">
+                                <div class="fr-view" dir="${story_dir}">
+                                    <div class="big-story-panel ${theme.font_size}" style="position:relative;">
+                                        <p class="${story_dir} ${highlight_on}"> 
+                                            <compose if.bind="photo_story.story_text" view-model='../stories/render-story' model.bind="highlightedHtml"></compose>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                             <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="photo_story"></editable>
                             <date-range label="photos.photo-date" 
                                 base_date_str.bind="photo_date_str" 
