--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -3,9 +3,9 @@
         <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" dir="rtl">
             <div class="row" style="margin-right:0;margin-left:0;">
                 <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
-                    <span css="position:absolute"></help>${'photos.more' & t}<help topic="photos.slider" position="right"></span>
+                    <span css="position:absolute"></help>${'photos.more-smaller' & t}<help topic="photos.slider" position="right"></span>
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
-                    <span css="position:absolute">${'photos.less' & t}</span>
+                    <span css="position:absolute">${'photos.larger' & t}</span>
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
@@ -76,11 +76,18 @@
                                     ${'members.back-to-' + caller_type & t}
                                 </button>
                             </div>
-                            <div if.bind="phase == 'photos-ready-to-edit' && user.privileges.PHOTO_UPLOADER && ! caller_type " t="[title]user.upload-files" class="input-group">
+                            <div if.bind="phase == 'photos-ready-to-edit' && user.privileges.PHOTO_UPLOADER && ! caller_type" t="[title]user.upload-files" class="input-group">
                                 <a href click.trigger="upload_files()" class="btn btn-success cl-create-btn">
                                     <i class="far fa-plus-square"></i>
                                     ${'photos.upload' & t}
                                 </a>
+                            </div>
+                            <div if.bind="user.privileges.ADMIN && ! caller_type"  t="[title]photos." class="input-group">
+                                <button 
+                                    click.trigger="find_duplicates()"
+                                    class="btn btn-basic btn-md">
+                                    ${'photos.find-duplicates' & t}
+                                </button>
                             </div>
                         </form>
                     </div>
