--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -98,7 +98,7 @@
                         </multi-select>
                     </div>
                     <div class="row">
-                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'photos.photographers' & t}</div>
+                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'videos.photographers' & t}</div>
                         <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             selected_options.bind="params.selected_photographers"
