--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -76,13 +76,18 @@
                         <help if.bind="phase=='ready-to-edit'" topic="terms.ready-to-edit" position="bottom"
                             style="position:absolute;left:0px;top:26px;"></help>
                             <span show.bind="false">${user_editing}</span>
-                            <multi-select options.bind="topic_list" place_holder_text="photos.click-topic"
-                            selected_options.bind="params.selected_topics" height.bind="220"
-                            settings.bind="options_settings" has_groups.bind="has_grouped_topics"
-                            option_groups.bind="topic_groups" ms-change.delegate="handle_topic_change($event)"
-                            new-name.delegate="add_topic($event)" name-changed.delegate="topic_name_changed($event)"
-                            remove-option.delegate="remove_topic($event)"
-                            clear_selections_now.bind="clear_selected_topics_now" style="margin-top:5px;">
+                            <multi-select 
+                                options.bind="topic_list" 
+                                place_holder_text="photos.click-topic"
+                                selected_options.bind="params.selected_topics" height.bind="220"
+                                settings.bind="options_settings" 
+                                has_groups.bind="has_grouped_topics"
+                                option_groups.bind="topic_groups" 
+                                ms-change.delegate="handle_topic_change($event)"
+                                new-name.delegate="add_topic($event)" 
+                                name-changed.delegate="topic_name_changed($event)"
+                                remove-option.delegate="remove_topic($event)"
+                                clear_selections_now.bind="clear_selected_topics_now" style="margin-top:5px;">
                         </multi-select>
                     </div>
                 </div>
