--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -49,7 +49,7 @@
                     <div class="row">
                         <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;"
                             ref="scroll_area" class="unselectable">
-                            <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" dir="rtl"
+                            <li repeat.for="term of term_list | filter: filter : 'Name' : 'author'" dir="rtl"
                                 style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;"
                                 click.delegate="jump_to_the_full_story($event, term)">
                                 <div style="height:120px;overflow:hidden;" class="story-preview">
@@ -58,7 +58,7 @@
                                             settings.bind="{show_author:true, show_date:false, class:'story-section', no_expand: true, deletable: true, checkable: true}"
                                             story.bind="term.story"
                                             change.delegate="toggle_selection(term, $event, $index)"
-                                            info_title.bind="term.name" info_content.bind="term.keywords"
+                                            info_title.bind="term.Name" info_content.bind="term.keywords"
                                             class="story-body">
                                         </editable>
                                     </div>
