--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -30,7 +30,7 @@
                             </div>
 
                             <div class="form-group" if.bind="user.editing && checked_terms.size>0">
-                                <button class="btn btn-warning btn-md" click.trigger="delete_checked_terms()">
+                                <button class="btn btn-warning btn-md" click.trigger="delete_checked_terms()" t="[title]terms.delete-checked-terms">
                                     <i class="far fa-trash-alt fa-xs"></i>
                                 </button>
                             </div>
@@ -55,7 +55,7 @@
                                 <div style="height:120px;overflow:hidden;" class="story-preview">
                                     <div style="margin-bottom: 10px;padding-right:0px;">
                                         <editable
-                                            settings.bind="{show_author:true, show_date:false, class:'story-section', no_expand: true, deletable: true, checkable: true}"
+                                            settings.bind="{show_author:true, show_date:false, class:'story-section', no_expand: true, checkable: true}"
                                             story.bind="term.story"
                                             change.delegate="toggle_selection(term, $event, $index)"
                                             info_title.bind="term.Name" info_content.bind="term.keywords"
@@ -70,7 +70,7 @@
 
                 <div class="col-md-3">
                     <div class="row" style="position:relative;">
-                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
+                        <!-- <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div> -->
                         <help if.bind="phase=='not-editing'" topic="tags" position="bottom"
                             style="position:absolute;left:0px;top:26px;"></help>
                         <help if.bind="phase=='ready-to-edit'" topic="terms.ready-to-edit" position="bottom"
