clear selected topics after apply

--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -31,7 +31,7 @@
                                     disabled.bind="params.selected_topics.length==0 && params.selected_photographers.length != 1 && params.videos_date_datestr == ''"
                                     class="btn btn-default btn-md" 
                                     click.trigger="apply_to_selected()">
-                                    ${'photos.apply-to-selected' & t}
+                                    ${'videos.apply-to-selected' & t}
                                 </button>
                                 <help topic="apply-to-selected-photos" position="bottom"></help>
                             </div>
