--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -13,9 +13,14 @@
                             <div class="input-group" if.bind="user.privileges.ADVANCED">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>
-                            <div if.bind="! got_duplicates" class="form-group hide-if-small">
+                            <div if.bind="(! got_duplicates) && params.photo_ids.length == 0" class="form-group hide-if-small">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
                                     ${with_a_member_text}
+                                </button>
+                            </div>
+                            <div if.bind="params.photo_ids.length > 0" class="form-group hide-if-small">
+                                <button class="btn btn-basic btn-md" click.delegate="show_all_photos($event)">
+                                    ${'photos.any-photo' & t}
                                 </button>
                             </div>
                             <div class="form-group" if.bind="phase=='can-merge-topics'">
