--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -125,7 +125,7 @@
                             style="margin-top:5px;">
                         </multi-select>
                     </div>
-                    <div if.bind="user.privileges.ADVANCED && user.editing" class="row">
+                    <div if.bind="user.privileges.ADVANCED && user.privileges.ADMIN && user.editing" class="row">
                         <button class="btn btn-xs ${params.deleted_stories ? 'active' : ''}"
                             click.trigger="toggle_deleted_stories()" t="[title]stories.undelete">
                             <i class="far fa-trash-alt fa-rotate-180 fa-xs"></i>
