--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -109,6 +109,8 @@
                             </div>
                         </form>
                     </div>
+                    <h3 if.bind="photo_list.length==0" innerhtml.bind="'no-results' & t">
+                    </h3>
                     <div class="row" id="photos-container" style="height:579px;overflow:auto;margin:0;padding:0;margin-bottom:16px;display:flex;flex-wrap:wrap;align-content:flex-start">
                         <div css="padding:0;margin:0;width:${photo_size}px;height:${photo_size}px;"
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
